remove other todo related code
